# betterflight

./: README.md  betterflight.ioc  colorPalette.txt
.github/: build_fc_fw.yml
.github/workflows/: build_fc_fw.yml  fcBuild.yml
Core/Inc/: main.h  misc.h
Core/Src/: gyro.c  misc.c
configurator/: CMakeLists.txt  ConfTabs.cpp  ConfTabs.h  DebugBoxManager.cpp  FlashManager.cpp  FlashManager.h  README.md  SerialManager.cpp  SerialManager.h  SettingsManager.cpp  SettingsManager.h  StyleManager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
configurator/managers/: DebugBoxManager.cpp  DebugBoxManager.h  FlashManager.cpp  FlashManager.h  SerialManager.cpp  SerialManager.h  SettingsManager.cpp  SettingsManager.h  StyleManager.cpp  StyleManager.h  TabManager.cpp  TabManager.h
configurator/tabs/: MotorTab.cpp  MotorTab.h
hardware/Betterfc/: BetterFC.PrjPcb  BetterFC.PrjPcbStructure  PCB1.PcbDoc  STM32F722RET6.PcbLib  betterfc.SchDoc  betterfc_v0.2.PcbDoc  betterfc_v0.2.SchDoc  betterfc_v0.3.PcbDoc  betterfc_v0.3.SchDoc
hardware/Lib/: AP63205WU-7.PcbLib  AP63205WU-7.SchLib  BetterFC.PrjPcb  BetterFC.PrjPcbStructure  STM32F722RET6.PcbLib  betterfc.SchDoc  blackbox.PcbLib  blackbox.SchLib  bmi270.PcbLib  bmi270.SchLib  bmp280.PcbLib  bmp280.SchLib  microUSB.SchLib  microusb.PcbLib  pad.SchLib  passiveComps.PcbLib  passive_components.SchLib  plugs.PcbLib  plugs.SchLib  stm32f722RE.SchLib
hardware/Lib/step/: 0402_Blue_LED.step  0402_CAP.step  0402_RES.step  0402_Red_LED.step  0518_Inductor.step  0603_CAP.STEP  3P_CeramicResonator.step  BMP_280.STEP  LGA_14p.step  SOD-323.STEP  SOT-23_5pins.STEP  TSOT26.step  jst 8 way top entry header 1_0mm.step  tacticalSwitchSMD.stp
software/: CMakeLists.txt  STM32F722RETX_FLASH.ld  STM32F722RETX_RAM.ld  betterflight.ioc
software/Core/Inc/: BMI270_CONFIG.h  cli.h  cli_cmd_callbacks.h  crsf.h  dshot.h  gyro.h  imu.h  log.h  main.h  misc.h  mixer.h  motors.h  mymain.h  pid.h  pid_controller.h  set_point.h  set_point_controller.h  spi.h  spi_soft.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h  version.h
software/Core/Src/: cli.c  cli_cmd_callbacks.c  crsf.c  dshot.c  gyro.c  imu.c  log.c  main.c  misc.c  mixer.c  motors.c  mymain.c  pid.c  pid_controller.c  set_point.c  set_point_controller.c  spi.c  spi_soft.c  (+2 more)
software/MySrc/: mymain.c  mymain.h
(+42 files in other folders)
